--- a/about me.html
+++ b/about me.html
@@ -1,7 +1,23 @@
 <html lang="en"><head>
 	<meta charset="utf-8">
 	<title>About AKANSH MAURYA</title>
-	<!-- Styles -->
+  
+	<meta charset="utf-8">
+	<title>Verifying and Validating College ID Images</title>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <meta property="og:image" content="">
+  <!-- Chrome, Firefox OS and Opera -->
+  <meta name="theme-color" content="#263959">
+  <!-- Windows Phone -->
+  <meta name="msapplication-navbutton-color" content="#263959">
+  <!-- iOS Safari -->
+  <meta name="apple-mobile-web-app-status-bar-style" content="#263959">
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=PT+Serif:400,700|Lato:300,400,700&display=swap" rel="stylesheet">
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="/flexible-jekyll/assets/fonts/font-awesome/css/font-awesome.min.css">
+  <!-- Styles -->
 	<link rel="stylesheet" href="aboutme.css">
 <body>
 
