--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <!-- Font Awesome -->
   <link rel="stylesheet" href="/flexible-jekyll/assets/fonts/font-awesome/css/font-awesome.min.css">
   <!-- Styles -->
-  <link rel="stylesheet" href="../Css/subpage1main.css">
+  <link rel="stylesheet" href="blogs/Css/subpage1main.css">
 </head>
 
 <body>
