--- a/need_for_robotics.html
+++ b/need_for_robotics.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Need for Robotics</title>
-  <link rel="shortcut icon" type="image" href="../Images/akansh_maurya.jpg">
+  <link rel="shortcut icon" type="image" href="Images/akansh_maurya.jpg">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta property="og:image" content="">
@@ -19,7 +19,7 @@
   <!-- Font Awesome -->
   <link rel="stylesheet" href="/flexible-jekyll/assets/fonts/font-awesome/css/font-awesome.min.css">
   <!-- Styles -->
-  <link rel="stylesheet" href="../Css/subpage1main.css">
+  <link rel="stylesheet" href="Css/subpage1main.css">
 </head>
 
 <body>
@@ -28,7 +28,7 @@
       <header>
         <div class="about">
           <div class="cover-author-image">
-            <a href="index.html" target="_self"><img src="../Images/akansh_maurya.jpg" alt="Akansh Maurya"></a>
+            <a href="https://akansh12.github.io/blogs/" target="_self"><img src="Images/akansh_maurya.jpg" alt="Akansh Maurya"></a>
           </div>
           <div class="author-name">Akansh Maurya</div>
           <p>I am a student pursuing Electrical Engineering, intrested in Deep Learning, Robotics, and Control
@@ -43,23 +43,23 @@
           <h3 class="contact-title">Contact me</h3>
           <div class="faconli">
             <ul>
-              <li> <a href="https://twitter.com/akansh_maurya" target="_blank"><img src="../Images/twitter.png"
+              <li> <a href="https://twitter.com/akansh_maurya" target="_blank"><img src="Images/twitter.png"
                     class="iconimag3" aria-hidden="true" alt="Twitter"></a></li>
 
 
-              <li><a href="tel:+919560165496" target="_self"><img src="../Images/contact.png" class="iconimag3"
+              <li><a href="tel:+919560165496" target="_self"><img src="Images/contact.png" class="iconimag3"
                     aria-hidden="true" alt="contact number"></a></li>
 
 
-              <li><a href="http://github.com/akansh12" target="_blank"><img src="../Images/github.png" class="iconimag3"
+              <li><a href="http://github.com/akansh12" target="_blank"><img src="Images/github.png" class="iconimag3"
                     aria-hidden="true" alt="github"></a></li>
 
 
               <li><a href="https://in.linkedin.com/in/akansh-maurya-246570154" target="_blank"><img
-                    src="../Images/linkden.png" class="iconimag3" aria-hidden="true" alt="linkedin"></a></li>
+                    src="Images/linkden.png" class="iconimag3" aria-hidden="true" alt="linkedin"></a></li>
 
 
-              <li><a href="mailto:akanshmaurya@gmail.com"><img class="iconimag3" src="../Images/mail.png"
+              <li><a href="mailto:akanshmaurya@gmail.com"><img class="iconimag3" src="Images/mail.png"
                     alt="mail"></a></li>
 
             </ul>
@@ -76,7 +76,7 @@
 
           <div class="page-cover-image">
             <figure>
-              <img class="page-image" src=" ../Images/need_for_robotics/man.jpg"
+              <img class="page-image" src="Images/need_for_robotics/man.jpg"
                 alt="man">
 
             </figure>
@@ -140,7 +140,7 @@
               small hole by converging and later expanding accordingly. Manholes can be upto 15 meter in depth, so our
               arm should be adjustable length to serve the purpose. </p>
 
-            <div class="imgs" style="width: 80%;"><img src="../Images/need_for_robotics/System_architecture.png"
+            <div class="imgs" style="width: 80%;"><img src="Images/need_for_robotics/System_architecture.png"
                 alt="system architecture">
               <center><b>Figure 1: System Architecture</b></center>
             </div>
@@ -175,11 +175,11 @@
 
 
             <div class="comb">
-              <div><img src="../Images/need_for_robotics/manhole_slam.png" alt="GeoSLAM performing mapping">
+              <div><img src="Images/need_for_robotics/manhole_slam.png" alt="GeoSLAM performing mapping">
                 <center><b>Figure 2: GeoSLAM performing mapping</b></center>
               </div>
 
-              <div><img src="../Images/need_for_robotics/Slam_results.png" alt="SLAM results">
+              <div><img src="Images/need_for_robotics/Slam_results.png" alt="SLAM results">
                 <center><b>Figure 3: SLAM results</b></center>
               </div>
             </div>
