--- a/grand_challenge.html
+++ b/grand_challenge.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>Fovea Localization for Age-related Macular degeneration (AMD) and
         Non-AMD Patients</title>
-    <link rel="shortcut icon" type="image" href="../Images/akansh_maurya.jpg">
+    <link rel="shortcut icon" type="image" href="Images/akansh_maurya.jpg">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta property="og:image" content="">
@@ -21,7 +21,7 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="/flexible-jekyll/assets/fonts/font-awesome/css/font-awesome.min.css">
     <!-- Styles -->
-    <link rel="stylesheet" href="../Css/subpage2.css">
+    <link rel="stylesheet" href="Css/subpage2.css">
 </head>
 
 <body>
@@ -30,7 +30,7 @@
             <header>
                 <div class="about">
                     <div class="cover-author-image">
-                        <a href="index.html" target="_self"><img src="../Images/akansh_maurya.jpg"
+                        <a href="index.html" target="_self"><img src="Images/akansh_maurya.jpg"
                                 alt="Akansh Maurya"></a>
                     </div>
                     <div class="author-name">Akansh Maurya</div>
@@ -47,24 +47,24 @@
                     <div class="faconli">
                         <ul>
                             <li> <a href="https://twitter.com/akansh_maurya" target="_blank"><img
-                                        src="../Images/twitter.png" class="iconimag3" aria-hidden="true"
+                                        src="Images/twitter.png" class="iconimag3" aria-hidden="true"
                                         alt="Twitter"></a></li>
 
 
-                            <li><a href="tel:+919560165496" target="_self"><img src="../Images/contact.png"
+                            <li><a href="tel:+919560165496" target="_self"><img src="Images/contact.png"
                                         class="iconimag3" aria-hidden="true" alt="contact number"></a></li>
 
 
-                            <li><a href="http://github.com/akansh12" target="_blank"><img src="../Images/github.png"
+                            <li><a href="http://github.com/akansh12" target="_blank"><img src="Images/github.png"
                                         class="iconimag3" aria-hidden="true" alt="github"></a></li>
 
 
                             <li><a href="https://in.linkedin.com/in/akansh-maurya-246570154" target="_blank"><img
-                                        src="../Images/linkden.png" class="iconimag3" aria-hidden="true"
+                                        src="Images/linkden.png" class="iconimag3" aria-hidden="true"
                                         alt="linkedin"></a></li>
 
 
-                            <li><a href="mailto:akanshmaurya@gmail.com"><img class="iconimag3" src="../Images/mail.png"
+                            <li><a href="mailto:akanshmaurya@gmail.com"><img class="iconimag3" src="Images/mail.png"
                                         alt="mail"></a></li>
 
                         </ul>
@@ -108,7 +108,7 @@
                         </p>
 
 
-                        <div class="imgs"><img src="../Images/grand_challenge/figure_1.png"
+                        <div class="imgs"><img src="Images/grand_challenge/figure_1.png"
                                 alt="Location of Fovea for Non-AMD">
                             <center><b>Figure 1: Location of Fovea for Non-AMD</b></center>
                         </div>
@@ -134,7 +134,7 @@
                             of the image file, second and third represents x, y coordinate of Fovea’s center. There are
                             311 Non-AMD patients while 89 are AMD. </p>
 
-                        <div class="imgs"><img src="../Images/grand_challenge/figure_2.png" alt="X, Y coordinate of Fovea’s center for different classes"/>
+                        <div class="imgs"><img src="Images/grand_challenge/figure_2.png" alt="X, Y coordinate of Fovea’s center for different classes"/>
                             <center><b>Figure 2 :X, Y coordinate of Fovea’s center for different classes.
                                 </b></center>
                         </div>
@@ -143,7 +143,7 @@
                             Original size of the image for height varies from 1400 to 2200 and the width ranges from
                             1400 to 2400 pixels.
                         </p>
-                        <div class="imgs"><img src="../Images/grand_challenge/figure_3.png" alt="A look into Dataset with image size">
+                        <div class="imgs"><img src="Images/grand_challenge/figure_3.png" alt="A look into Dataset with image size">
                             <center><b>Figure 3: A look into Dataset with image size</b></center>
                         </div>
                         <h3 id="plaid-ramps-kitsch-woke-pork-belly">Data Transformation and Augmentation [Results only]
@@ -165,7 +165,7 @@
                                     <li type="square">We will resize the image to (256, 256). We also have to scale the
                                         labels in
                                         the same ratio. Refer to the code link.</li>
-                                    <div class="imgs"><img src="../Images/grand_challenge/figure_4.png"
+                                    <div class="imgs"><img src="Images/grand_challenge/figure_4.png"
                                             alt="Image Resizing">
                                         <center><b>Figure 4: Image Resizing </b></center>
                                     </div>
@@ -173,7 +173,7 @@
                             </li>
                             <li>
                                 <h4>Random Vertical Fliping </h4>
-                                <div class="imgs"><img src="../Images/grand_challenge/figure_5.png"
+                                <div class="imgs"><img src="Images/grand_challenge/figure_5.png"
                                         alt="Vertical Flip">
                                     <center><b>Figure 5: Vertical Flip</b></center>
                                 </div>
@@ -181,7 +181,7 @@
                             <li>
                                 <h4>Random Horizontal Fliping</h4>
 
-                                <div class="imgs"><img src="../Images/grand_challenge/figure_6.png"
+                                <div class="imgs"><img src="Images/grand_challenge/figure_6.png"
                                         alt="Horizontal Flip">
                                     <center><b>Figure 6: Horizontal Flip</b></center>
                                 </div>
@@ -189,7 +189,7 @@
                             <li>
                                 <h4>Random Shifting</h4>
 
-                                <div class="imgs"><img src="../Images/grand_challenge/figure_7.png"
+                                <div class="imgs"><img src="Images/grand_challenge/figure_7.png"
                                         alt="Random Shifting">
                                     <center><b>Figure 7: Random Shifting
                                         </b></center>
@@ -198,13 +198,13 @@
                         </ul>
                         <h3 id="plaid-ramps-kitsch-woke-pork-belly">Creating Model: </h3>
 
-                        <div class="imgs"><img src="../Images/grand_challenge/figure_8.png" alt="Model Architechture">
+                        <div class="imgs"><img src="Images/grand_challenge/figure_8.png" alt="Model Architechture">
                             <center><b>Figure 8: Model Architechture
                                 </b></center>
                         </div>
                         <p>The code snippet shoes the implementation: </p>
-                        <div class="imgs"><a href="../Images/grand_challenge/figure_9.png"><img
-                                    src="../Images/grand_challenge/figure_9.png" alt="Model implementation" /></a>
+                        <div class="imgs"><a href="Images/grand_challenge/figure_9.png"><img
+                                    src="Images/grand_challenge/figure_9.png" alt="Model implementation" /></a>
                             <center><b>Figure 9: Model implementation
                                 </b></center>
                         </div>
@@ -214,7 +214,7 @@
                         <p>
                         <ul>
                             <li>Loss Curve
-                                <div class="imgs"><img src="../Images/grand_challenge/figure_10.png"
+                                <div class="imgs"><img src="Images/grand_challenge/figure_10.png"
                                         alt="Loss Curve">
                                     <center><b>Figure 10: Loss Curve
                                         </b></center>
@@ -222,7 +222,7 @@
                             </li>
 
                             <li>Accuracy Curve
-                                <div class="imgs"><img src="../Images/grand_challenge/figure_11.png"
+                                <div class="imgs"><img src="Images/grand_challenge/figure_11.png"
                                         alt="Data Distribution">
                                     <center><b>Accuracy Curve
                                         </b></center>
@@ -232,7 +232,7 @@
 
                             <li>IOU Metric as label in the figure.
 
-                                <div class="imgs"><img src="../Images/grand_challenge/figure_12.png"
+                                <div class="imgs"><img src="Images/grand_challenge/figure_12.png"
                                         alt="Data Distribution">
                                     <center><b>IOU
                                         </b></center>
