--- a/automated_measurement_of fetal_head_circumference.html
+++ b/automated_measurement_of fetal_head_circumference.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Automated measurement of fetal head circumference</title>
-    <link rel="shortcut icon" type="image" href="../Images/akansh_maurya.jpg">
+    <link rel="shortcut icon" type="image" href="Images/akansh_maurya.jpg">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta property="og:image" content="">
@@ -20,7 +20,7 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="/flexible-jekyll/assets/fonts/font-awesome/css/font-awesome.min.css">
     <!-- Styles -->
-    <link rel="stylesheet" href="../Css/subpage2.css">
+    <link rel="stylesheet" href="Css/subpage2.css">
 </head>
 
 <body>
@@ -29,7 +29,7 @@
             <header>
                 <div class="about">
                     <div class="cover-author-image">
-                        <a href="index.html" target="_self"><img src="../Images/akansh_maurya.jpg"
+                        <a href="index.html" target="_self"><img src="Images/akansh_maurya.jpg"
                                 alt="Akansh Maurya"></a>
                     </div>
                     <div class="author-name">Akansh Maurya</div>
@@ -46,24 +46,24 @@
                     <div class="faconli">
                         <ul>
                             <li> <a href="https://twitter.com/akansh_maurya" target="_blank"><img
-                                        src="../Images/twitter.png" class="iconimag3" aria-hidden="true"
+                                        src="Images/twitter.png" class="iconimag3" aria-hidden="true"
                                         alt="Twitter"></a></li>
 
 
-                            <li><a href="tel:+919560165496" target="_self"><img src="../Images/contact.png"
+                            <li><a href="tel:+919560165496" target="_self"><img src="Images/contact.png"
                                         class="iconimag3" aria-hidden="true" alt="contact number"></a></li>
 
 
-                            <li><a href="http://github.com/akansh12" target="_blank"><img src="../Images/github.png"
+                            <li><a href="http://github.com/akansh12" target="_blank"><img src="Images/github.png"
                                         class="iconimag3" aria-hidden="true" alt="github"></a></li>
 
 
                             <li><a href="https://in.linkedin.com/in/akansh-maurya-246570154" target="_blank"><img
-                                        src="../Images/linkden.png" class="iconimag3" aria-hidden="true"
+                                        src="Images/linkden.png" class="iconimag3" aria-hidden="true"
                                         alt="linkedin"></a></li>
 
 
-                            <li><a href="mailto:akanshmaurya@gmail.com"><img class="iconimag3" src="../Images/mail.png"
+                            <li><a href="mailto:akanshmaurya@gmail.com"><img class="iconimag3" src="Images/mail.png"
                                         alt="mail"></a></li>
 
                         </ul>
@@ -101,7 +101,7 @@
                         </p>
 
 
-                        <div class="imgs"><img src="../Images/automated_measurement/figure_1.png"
+                        <div class="imgs"><img src="Images/automated_measurement/figure_1.png"
                                 alt="A look into Dataset">
                             <center><b>Figure 1: A look into Dataset</b></center>
                         </div>
@@ -130,8 +130,8 @@
 
 
 
-                        <div class="imgs"><a href="../Images/automated_measurement/figure_2.png"><img
-                                    src="../Images/automated_measurement/figure_2.png"
+                        <div class="imgs"><a href="Images/automated_measurement/figure_2.png"><img
+                                    src="Images/automated_measurement/figure_2.png"
                                     alt="Loss function definition code."></a>
                             <center><b>Figure 2: Loss function definition code.
                                 </b></center>
@@ -141,14 +141,14 @@
 
                         <p>Training and validation loss: </p>
 
-                        <div class="img-square"><img src="../Images/automated_measurement/figure_3.png" alt="figure 3">
+                        <div class="img-square"><img src="Images/automated_measurement/figure_3.png" alt="figure 3">
                             <center><b>Figure 3:</b></center>
                         </div>
 
 
                         <p>Training and validation accuracy: </p>
 
-                        <div class="img-square"><img src="../Images/automated_measurement/figure_4.png"
+                        <div class="img-square"><img src="Images/automated_measurement/figure_4.png"
                                 alt="Image Resizing">
                             <center><b>Figure 4: Image Resizing </b></center>
                         </div>
@@ -156,7 +156,7 @@
 
                         <h3 id="plaid-ramps-kitsch-woke-pork-belly">Testing Results</h3>
 
-                        <div class="img-square"><img src="../Images/automated_measurement/figure_5.png"
+                        <div class="img-square"><img src="Images/automated_measurement/figure_5.png"
                                 alt="The middle column represents the predicted mask">
                             <center><b>Figure 5: The middle column represents the predicted mask</b></center>
                         </div>
