--- a/about me.html
+++ b/about me.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>About Akansh Maurya</title>
-  <link rel="shortcut icon" type="image" href="../Images/akansh_maurya.jpg">
+  <link rel="shortcut icon" type="image" href="Images/akansh_maurya.jpg">
   <meta charset="utf-8">
   <title>Verifying and Validating College ID Images</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -20,7 +20,7 @@
   <!-- Font Awesome -->
   <link rel="stylesheet" href="/flexible-jekyll/assets/fonts/font-awesome/css/font-awesome.min.css">
   <!-- Styles -->
-  <link rel="stylesheet" href="../Css/subpage1main.css">
+  <link rel="stylesheet" href="Css/subpage1main.css">
 
 <body>
 
@@ -29,7 +29,7 @@
       <header>
         <div class="about">
           <div class="cover-author-image">
-            <a href="index.html" target="_self"><img src="../Images/akansh_maurya.jpg" alt="Akansh Maurya"></a>
+            <a href="index.html" target="_self"><img src="Images/akansh_maurya.jpg" alt="Akansh Maurya"></a>
           </div>
           <div class="author-name">Akansh Maurya</div>
           <p>I am a student pursuing Electrical Engineering, intrested in Deep Learning, Robotics, and Control Systems.
@@ -44,23 +44,23 @@
           <h3 class="contact-title">Contact me</h3>
           <div class="faconli">
             <ul>
-              <li> <a href="https://twitter.com/akansh_maurya" target="_blank"><img src="../Images/twitter.png"
+              <li> <a href="https://twitter.com/akansh_maurya" target="_blank"><img src="Images/twitter.png"
                     class="iconimag3" aria-hidden="true" alt="Twitter"></a></li>
 
 
-              <li><a href="tel:+919560165496" target="_self"><img src="../Images/contact.png" class="iconimag3"
+              <li><a href="tel:+919560165496" target="_self"><img src="Images/contact.png" class="iconimag3"
                     aria-hidden="true" alt="contact number"></a></li>
 
 
-              <li><a href="http://github.com/akansh12" target="_blank"><img src="../Images/github.png" class="iconimag3"
+              <li><a href="http://github.com/akansh12" target="_blank"><img src="Images/github.png" class="iconimag3"
                     aria-hidden="true" alt="github"></a></li>
 
 
               <li><a href="https://in.linkedin.com/in/akansh-maurya-246570154" target="_blank"><img
-                    src="../Images/linkden.png" class="iconimag3" aria-hidden="true" alt="linkedin"></a></li>
+                    src="Images/linkden.png" class="iconimag3" aria-hidden="true" alt="linkedin"></a></li>
 
 
-              <li><a href="mailto:akanshmaurya@gmail.com"><img class="iconimag3" src="../Images/mail.png"
+              <li><a href="mailto:akanshmaurya@gmail.com"><img class="iconimag3" src="Images/mail.png"
                     alt="mail"></a></li>
 
             </ul>
