--- a/Verifying_and_Validating_College_ID_Images.html
+++ b/Verifying_and_Validating_College_ID_Images.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Verifying_and_Validating_College_ID_Images</title>
-  <link rel="shortcut icon" type="image" href="../Images/akansh_maurya.jpg">
+  <link rel="shortcut icon" type="image" href="Images/akansh_maurya.jpg">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta property="og:image" content="">
@@ -19,7 +19,7 @@
   <!-- Font Awesome -->
   <link rel="stylesheet" href="/flexible-jekyll/assets/fonts/font-awesome/css/font-awesome.min.css">
   <!-- Styles -->
-  <link rel="stylesheet" href="../Css/subpage1main.css">
+  <link rel="stylesheet" href="Css/subpage1main.css">
 </head>
 
 <body>
@@ -28,7 +28,7 @@
       <header>
         <div class="about">
           <div class="cover-author-image">
-            <a href="index.html" target="_self"><img src="../Images/akansh_maurya.jpg" alt="Akansh Maurya"></a>
+            <a href="index.html" target="_self"><img src="Images/akansh_maurya.jpg" alt="Akansh Maurya"></a>
           </div>
           <div class="author-name">Akansh Maurya</div>
           <p>I am a student pursuing Electrical Engineering, intrested in Deep Learning, Robotics, and Control
@@ -43,23 +43,23 @@
           <h3 class="contact-title">Contact me</h3>
           <div class="faconli">
             <ul>
-              <li> <a href="https://twitter.com/akansh_maurya" target="_blank"><img src="../Images/twitter.png"
+              <li> <a href="https://twitter.com/akansh_maurya" target="_blank"><img src="Images/twitter.png"
                     class="iconimag3" aria-hidden="true" alt="Twitter"></a></li>
 
 
-              <li><a href="tel:+919560165496" target="_self"><img src="../Images/contact.png" class="iconimag3"
+              <li><a href="tel:+919560165496" target="_self"><img src="Images/contact.png" class="iconimag3"
                     aria-hidden="true" alt="contact number"></a></li>
 
 
-              <li><a href="http://github.com/akansh12" target="_blank"><img src="../Images/github.png" class="iconimag3"
+              <li><a href="http://github.com/akansh12" target="_blank"><img src="Images/github.png" class="iconimag3"
                     aria-hidden="true" alt="github"></a></li>
 
 
               <li><a href="https://in.linkedin.com/in/akansh-maurya-246570154" target="_blank"><img
-                    src="../Images/linkden.png" class="iconimag3" aria-hidden="true" alt="linkedin"></a></li>
+                    src="Images/linkden.png" class="iconimag3" aria-hidden="true" alt="linkedin"></a></li>
 
 
-              <li><a href="mailto:akanshmaurya@gmail.com"><img class="iconimag3" src="../Images/mail.png"
+              <li><a href="mailto:akanshmaurya@gmail.com"><img class="iconimag3" src="Images/mail.png"
                     alt="mail"></a></li>
 
             </ul>
@@ -95,7 +95,7 @@
             <p>** I cannot share much about the pipeline and procedure because our paper is under review. </p>
 
 
-            <div class="imgs"><img src="../Images/verifing_and_validating/figure_1.png" alt="Cover page">
+            <div class="imgs"><img src="Images/verifing_and_validating/figure_1.png" alt="Cover page">
               <center><b>Figure 1: Cover page</b></center>
             </div>
 
@@ -112,14 +112,14 @@
               automatically before passing through our classification and OCR model.
             </p>
 
-            <div class="imgs"><img src="../Images/verifing_and_validating/figure_2.png" alt="Problem Definition">
+            <div class="imgs"><img src="Images/verifing_and_validating/figure_2.png" alt="Problem Definition">
               <center><b>Figure 2 :Problem Definition</b></center>
             </div>
 
 
             <h2 id="plaid-ramps-kitsch-woke-pork-belly">Overview of pipeline</h2>
 
-            <div class="imgs"><img src="../Images/verifing_and_validating/figure_3.png" alt="Pipeline">
+            <div class="imgs"><img src="Images/verifing_and_validating/figure_3.png" alt="Pipeline">
               <center><b>Figure 3: Pipeline</b></center>
             </div>
 
@@ -140,7 +140,7 @@
               camera, thus some images were blur, low resolution, presence of background noise and randomly oriented.
               Many of them were end to end cropped, but it was estimated that only around 2-3 percent of images have
               background noise. It was estimated that around 8 percent of images were oriented at different angle</p>
-            <div class="imgs"><img src="../Images/verifing_and_validating/figure_4.png" alt="Data Distribution">
+            <div class="imgs"><img src="Images/verifing_and_validating/figure_4.png" alt="Data Distribution">
               <center><b>Figure 4: Data Distribution</b></center>
             </div>
             <h2 id="plaid-ramps-kitsch-woke-pork-belly">Classification Model</h2>
@@ -159,7 +159,7 @@
               others. Others include those images which rarely occur in the dataset, mainly selfies, backgrounds, photos
               of faces, etc.
             </p>
-            <div class="imgs"><img src="../Images/verifing_and_validating/figure_5.png" alt="Classification Task">
+            <div class="imgs"><img src="Images/verifing_and_validating/figure_5.png" alt="Classification Task">
               <center><b>Figure 5: Classification Task</b></center>
             </div>
 
@@ -174,20 +174,20 @@
               orientation. So in our dataset we introduced the images of faces available in the open-source data
               repository. Our hypothesis was that extracting features of faces is easier than the text data present.</p>
 
-            <div class="imgs"><img src="../Images/verifing_and_validating/figure_6.png" alt="Rotate-Net">
+            <div class="imgs"><img src="Images/verifing_and_validating/figure_6.png" alt="Rotate-Net">
               <center><b>Figure 6: Rotate-Net</b></center>
             </div>
 
             <h2 id="plaid-ramps-kitsch-woke-pork-belly">Text detection and Recognition</h2>
 
 
-            <div class="imgs"><img src="../Images/verifing_and_validating/figure_7.png" alt="Comparison between OCR">
+            <div class="imgs"><img src="Images/verifing_and_validating/figure_7.png" alt="Comparison between OCR">
               <center><b>Figure 7: Comparison between OCR</b></center>
             </div>
 
             <h2 id="plaid-ramps-kitsch-woke-pork-belly">Results of OCR</h2>
 
-            <div class="imgs"><img src="../Images/verifing_and_validating/figure_8.png"
+            <div class="imgs"><img src="Images/verifing_and_validating/figure_8.png"
                 alt="Text detection and Recognition">
               <center><b>Figure 8: Text detection and Recognition</b></center>
             </div>
@@ -211,13 +211,13 @@
               </li>
             </ul>
             </p>
-            <div class="imgs"><img src="../Images/verifing_and_validating/figure_9.png"
+            <div class="imgs"><img src="Images/verifing_and_validating/figure_9.png"
                 alt="Fuzzy Set Matching Results">
               <center><b>Figure 9: Fuzzy Set Matching Results</b></center>
             </div>
 
             <h2 id="plaid-ramps-kitsch-woke-pork-belly">Credits:</h2>
-            <div class="imgs"><img src="../Images/verifing_and_validating/figure_10.png" alt="Credits"></div>
+            <div class="imgs"><img src="Images/verifing_and_validating/figure_10.png" alt="Credits"></div>
 
             <div class="page-footer">
 
