--- a/Survey_and_Rescue.html
+++ b/Survey_and_Rescue.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Survey and Rescue</title>
-  <link rel="shortcut icon" type="image" href="../Images/akansh_maurya.jpg">
+  <link rel="shortcut icon" type="image" href="Images/akansh_maurya.jpg">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta property="og:image" content="">
@@ -19,7 +19,7 @@
   <!-- Font Awesome -->
   <link rel="stylesheet" href="/flexible-jekyll/assets/fonts/font-awesome/css/font-awesome.min.css">
   <!-- Styles -->
-  <link rel="stylesheet" href="../Css/subpage2.css">
+  <link rel="stylesheet" href="Css/subpage2.css">
 </head>
 
 <body>
@@ -29,7 +29,7 @@
       <header>
         <div class="about">
           <div class="cover-author-image">
-            <a href="index.html" target="_self"><img src="../Images/akansh_maurya.jpg" alt="Akansh Maurya"></a>
+            <a href="index.html" target="_self"><img src="Images/akansh_maurya.jpg" alt="Akansh Maurya"></a>
           </div>
           <div class="author-name">Akansh Maurya</div>
           <p>I am a student pursuing Electrical Engineering, intrested in Deep Learning, Robotics, and Control
@@ -44,23 +44,23 @@
           <h3 class="contact-title">Contact me</h3>
           <div class="faconli">
             <ul>
-              <li> <a href="https://twitter.com/akansh_maurya" target="_blank"><img src="../Images/twitter.png"
+              <li> <a href="https://twitter.com/akansh_maurya" target="_blank"><img src="Images/twitter.png"
                     class="iconimag3" aria-hidden="true" alt="Twitter"></a></li>
 
 
-              <li><a href="tel:+919560165496" target="_self"><img src="../Images/contact.png" class="iconimag3"
+              <li><a href="tel:+919560165496" target="_self"><img src="Images/contact.png" class="iconimag3"
                     aria-hidden="true" alt="contact number"></a></li>
 
 
-              <li><a href="http://github.com/akansh12" target="_blank"><img src="../Images/github.png" class="iconimag3"
+              <li><a href="http://github.com/akansh12" target="_blank"><img src="Images/github.png" class="iconimag3"
                     aria-hidden="true" alt="github"></a></li>
 
 
               <li><a href="https://in.linkedin.com/in/akansh-maurya-246570154" target="_blank"><img
-                    src="../Images/linkden.png" class="iconimag3" aria-hidden="true" alt="linkedin"></a></li>
+                    src="Images/linkden.png" class="iconimag3" aria-hidden="true" alt="linkedin"></a></li>
 
 
-              <li><a href="mailto:akanshmaurya@gmail.com"><img class="iconimag3" src="../Images/mail.png"
+              <li><a href="mailto:akanshmaurya@gmail.com"><img class="iconimag3" src="Images/mail.png"
                     alt="mail"></a></li>
 
             </ul>
@@ -77,7 +77,7 @@
 
           <div class="page-cover-image">
             <figure>
-              <img class="page-image" src="../Images/survey_and_rescue/header.png" alt="header">
+              <img class="page-image" src="Images/survey_and_rescue/header.png" alt="header">
 
             </figure>
           </div> <!-- End Page Cover Image -->
@@ -97,11 +97,11 @@
 
 
             <div class="comb">
-              <div><img src="../Images/survey_and_rescue/figure_1.jpeg" alt="Plato X Drone">
+              <div><img src="Images/survey_and_rescue/figure_1.jpeg" alt="Plato X Drone">
                 <center><b>Figure 1: Plato X Drone</b></center>
               </div>
 
-              <div><img src="../Images/survey_and_rescue/figure_2.png" alt="Simulation">
+              <div><img src="Images/survey_and_rescue/figure_2.png" alt="Simulation">
                 <center><b>Figure 2: Simulation</b></center>
               </div>
 
@@ -181,12 +181,12 @@
               value can lead to crash or damage of the hardware. One good way was to tie a string to the drone. One of
               my friend hold tdrone through string while other tuned the drone.
             </p>
-            <div class="imgs"><img src="../Images/survey_and_rescue/figure_3.png"
+            <div class="imgs"><img src="Images/survey_and_rescue/figure_3.png"
                 alt="Tuning in Simulator">
               <center><b>Figure 3 : Tuning in Simulator</b></center>
             </div>
 
-            <div class="imgs"><img src="../Images/survey_and_rescue/figure_4.png"
+            <div class="imgs"><img src="Images/survey_and_rescue/figure_4.png"
                 alt="Tuning on Hardware">
               <center><b>Figure 4 : Tuning on Hardware, See the tied string on Drone. </b></center>
             </div>
@@ -204,7 +204,7 @@
             </ol>
             </p>
 
-            <div class="imgs"><img src="../Images/survey_and_rescue/figure_5_s1.png" alt="ROIs">
+            <div class="imgs"><img src="Images/survey_and_rescue/figure_5_s1.png" alt="ROIs">
               <center><b>Figure 5 : Figure 5 : ROIs</b></center>
             </div>
 
@@ -229,7 +229,7 @@
             </ol>
             </p>
 
-            <div class="imgs"><img src="../Images/survey_and_rescue/figure_6.png"
+            <div class="imgs"><img src="Images/survey_and_rescue/figure_6.png"
                 alt="Colour detection">
               <center><b>Figure 6 : Colour detection</b></center>
             </div>
