--- a/Coding_the_Genetic_Algorithm_using_MATLAB.html
+++ b/Coding_the_Genetic_Algorithm_using_MATLAB.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Coding the Genetic Algorithm using MATLAB</title>
-  <link rel="shortcut icon" type="image" href="../Images/akansh_maurya.jpg">
+  <link rel="shortcut icon" type="image" href="Images/akansh_maurya.jpg">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta property="og:image" content="">
@@ -19,7 +19,7 @@
   <!-- Font Awesome -->
   <link rel="stylesheet" href="/flexible-jekyll/assets/fonts/font-awesome/css/font-awesome.min.css">
   <!-- Styles -->
-  <link rel="stylesheet" href="../Css/subpage3.css">
+  <link rel="stylesheet" href="Css/subpage3.css">
 </head>
 
 <body>
@@ -28,7 +28,7 @@
       <header>
         <div class="about">
           <div class="cover-author-image">
-            <a href="index.html" target="_self"><img src="../Images/akansh_maurya.jpg" alt="Akansh Maurya"></a>
+            <a href="index.html" target="_self"><img src="Images/akansh_maurya.jpg" alt="Akansh Maurya"></a>
           </div>
           <div class="author-name">Akansh Maurya</div>
           <p>I am a student pursuing Electrical Engineering, intrested in Deep Learning, Robotics, and Control
@@ -43,23 +43,23 @@
           <h3 class="contact-title">Contact me</h3>
           <div class="faconli">
             <ul>
-              <li> <a href="https://twitter.com/akansh_maurya" target="_blank"><img src="../Images/twitter.png"
+              <li> <a href="https://twitter.com/akansh_maurya" target="_blank"><img src="Images/twitter.png"
                     class="iconimag3" aria-hidden="true" alt="Twitter"></a></li>
 
 
-              <li><a href="tel:+919560165496" target="_self"><img src="../Images/contact.png" class="iconimag3"
+              <li><a href="tel:+919560165496" target="_self"><img src="Images/contact.png" class="iconimag3"
                     aria-hidden="true" alt="contact number"></a></li>
 
 
-              <li><a href="http://github.com/akansh12" target="_blank"><img src="../Images/github.png" class="iconimag3"
+              <li><a href="http://github.com/akansh12" target="_blank"><img src="Images/github.png" class="iconimag3"
                     aria-hidden="true" alt="github"></a></li>
 
 
               <li><a href="https://in.linkedin.com/in/akansh-maurya-246570154" target="_blank"><img
-                    src="../Images/linkden.png" class="iconimag3" aria-hidden="true" alt="linkedin"></a></li>
+                    src="Images/linkden.png" class="iconimag3" aria-hidden="true" alt="linkedin"></a></li>
 
 
-              <li><a href="mailto:akanshmaurya@gmail.com"><img class="iconimag3" src="../Images/mail.png"
+              <li><a href="mailto:akanshmaurya@gmail.com"><img class="iconimag3" src="Images/mail.png"
                     alt="mail"></a></li>
 
             </ul>
@@ -76,7 +76,7 @@
 
           <div class="page-cover-image">
             <figure>
-              <img class="page-image" src="../Images/coding_the_generic/thumbnail_genetic.png" alt="thumbnail_genetic">
+              <img class="page-image" src="Images/coding_the_generic/thumbnail_genetic.png" alt="thumbnail_genetic">
 
             </figure>
           </div> <!-- End Page Cover Image -->
@@ -113,12 +113,12 @@
             </ul>
             </p>
             <div class="comb">
-              <div><img src="../Images/coding_the_generic/figure_1.jpeg"
+              <div><img src="Images/coding_the_generic/figure_1.jpeg"
                   alt="Optimization is finding the global minima of the function">
                 <center><b>Figure 1: Optimization is finding the global minima of the function</b></center>
               </div>
 
-              <div><img src="../Images/coding_the_generic/figure_2.png" alt="Flow diagram of evolution in Nature">
+              <div><img src="Images/coding_the_generic/figure_2.png" alt="Flow diagram of evolution in Nature">
                 <center><b>Figure 2: Flow diagram of evolution in Nature</b></center>
               </div>
             </div>
@@ -152,7 +152,7 @@
 
             <h3 id="plaid-ramps-kitsch-woke-pork-belly">Elitism:</h3>
             <p>Elitism is the preservation of the few best solutions for the population pool.</p>
-            <div class="imgs"><img src="../Images/coding_the_generic/figure_3.png"
+            <div class="imgs"><img src="Images/coding_the_generic/figure_3.png"
                 alt="Analogy between Nature and Generic Algorithm">
               <center><b>Figure 3: Analogy between Nature and Generic Algorithm</b></center>
             </div>
@@ -174,8 +174,8 @@ Calculate the fitness function;
 </pre>
             <h3 id="plaid-ramps-kitsch-woke-pork-belly">Problem Statement: </h3>
             <!-- <h4 id="plaid-ramps-kitsch-woke-pork-belly">Problem Statement: </h4> -->
-            <div><a href="../Images/coding_the_generic/figure_4.png" target="_self"><img class="problem"
-                  src="../Images/coding_the_generic/figure_4.png" alt="Problem Statement"></a>
+            <div><a href="Images/coding_the_generic/figure_4.png" target="_self"><img class="problem"
+                  src="Images/coding_the_generic/figure_4.png" alt="Problem Statement"></a>
               <center><b>Figure 4: Problem Statement</b></center>
             </div>
             <p>
@@ -185,28 +185,28 @@ Calculate the fitness function;
             </p>
             <h3 id="plaid-ramps-kitsch-woke-pork-belly">Problem Definition:</h3>
 
-            <div class="imgs"><img src="../Images/coding_the_generic/figure_5.png" alt="Defining Problem">
+            <div class="imgs"><img src="Images/coding_the_generic/figure_5.png" alt="Defining Problem">
               <center><b>Figure 5: Defining Problem </b></center>
             </div>
             <p><b>Note: </b>Selection is done in the main Script.</p>
 
             <h3 id="plaid-ramps-kitsch-woke-pork-belly">Crossover:</h3>
 
-            <div class="imgs"><img src="../Images/coding_the_generic/figure_6.png" alt="Single point Crossover">
+            <div class="imgs"><img src="Images/coding_the_generic/figure_6.png" alt="Single point Crossover">
               <center><b>Figure 6: Single point Crossover</b></center>
             </div>
 
             <h3 id="plaid-ramps-kitsch-woke-pork-belly">Mutation:</h3>
 
 
-            <div class="imgs"><img src="../Images/coding_the_generic/figure_7.png"
+            <div class="imgs"><img src="Images/coding_the_generic/figure_7.png"
                 alt="Adding mutation to avoid local minima">
               <center><b>Figure 7: Adding mutation to avoid local minima</b></center>
             </div>
 
             <h3 id="plaid-ramps-kitsch-woke-pork-belly">Elitism:</h3>
 
-            <div class="imgs"><img src="../Images/coding_the_generic/figure_8.png"
+            <div class="imgs"><img src="Images/coding_the_generic/figure_8.png"
                 alt="Performing Elitism to save good solutions">
               <center><b>Figure 8: Performing Elitism to save good solutions</b></center>
             </div>
@@ -219,14 +219,14 @@ Calculate the fitness function;
               Mutation Probability: 0.1
             </p>
 
-            <div class="imgs"><img src="../Images/coding_the_generic/figure_9.png"
+            <div class="imgs"><img src="Images/coding_the_generic/figure_9.png"
                 alt="X-Axis: No. of Iterations, Y-Axis: Cost of Function">
               <center><b> Figure 9: X-Axis: No. of Iterations, Y-Axis: Cost of Function</b></center>
             </div>
             <p>X1 and X2 respectively shown below: </p>
 
 
-            <div><img src="../Images/coding_the_generic/figure_10.png" alt="results"></div>
+            <div><img src="Images/coding_the_generic/figure_10.png" alt="results"></div>
 
 
             <div class="page-footer">
