--- a/Coding_the_Genetic_Algorithm_using_MATLAB.html
+++ b/Coding_the_Genetic_Algorithm_using_MATLAB.html
@@ -174,8 +174,8 @@ Calculate the fitness function;
 </pre>
             <h3 id="plaid-ramps-kitsch-woke-pork-belly">Problem Statement: </h3>
             <!-- <h4 id="plaid-ramps-kitsch-woke-pork-belly">Problem Statement: </h4> -->
-            <div><a href="Images/coding_the_generic/figure_4.png" target="_self"><img class="problem"
-                  src="Images/coding_the_generic/figure_4.png" alt="Problem Statement"></a>
+            <div><a href="Images/coding_the_generic/figure_4.PNG" target="_self"><img class="problem"
+                  src="Images/coding_the_generic/figure_4.PNG" alt="Problem Statement"></a>
               <center><b>Figure 4: Problem Statement</b></center>
             </div>
             <p>
@@ -192,21 +192,21 @@ Calculate the fitness function;
 
             <h3 id="plaid-ramps-kitsch-woke-pork-belly">Crossover:</h3>
 
-            <div class="imgs"><img src="Images/coding_the_generic/figure_6.png" alt="Single point Crossover">
+            <div class="imgs"><img src="Images/coding_the_generic/figure_6.PNG" alt="Single point Crossover">
               <center><b>Figure 6: Single point Crossover</b></center>
             </div>
 
             <h3 id="plaid-ramps-kitsch-woke-pork-belly">Mutation:</h3>
 
 
-            <div class="imgs"><img src="Images/coding_the_generic/figure_7.png"
+            <div class="imgs"><img src="Images/coding_the_generic/figure_7.PNG"
                 alt="Adding mutation to avoid local minima">
               <center><b>Figure 7: Adding mutation to avoid local minima</b></center>
             </div>
 
             <h3 id="plaid-ramps-kitsch-woke-pork-belly">Elitism:</h3>
 
-            <div class="imgs"><img src="Images/coding_the_generic/figure_8.png"
+            <div class="imgs"><img src="Images/coding_the_generic/figure_8.PNG"
                 alt="Performing Elitism to save good solutions">
               <center><b>Figure 8: Performing Elitism to save good solutions</b></center>
             </div>
