--- a/Coding_the_Genetic_Algorithm_using_MATLAB.html
+++ b/Coding_the_Genetic_Algorithm_using_MATLAB.html
@@ -185,7 +185,7 @@ Calculate the fitness function;
             </p>
             <h3 id="plaid-ramps-kitsch-woke-pork-belly">Problem Definition:</h3>
 
-            <div class="imgs"><img src="Images/coding_the_generic/figure_5.png" alt="Defining Problem">
+            <div class="imgs"><img src="Images/coding_the_generic/figure_5.PNG" alt="Defining Problem">
               <center><b>Figure 5: Defining Problem </b></center>
             </div>
             <p><b>Note: </b>Selection is done in the main Script.</p>
