--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </section> <!-- End Section Contact -->
         <div class="copyright">
           <p>2021 © Akansh Maurya</p>
-          <p><a href='https://freehitcounters.org/'>FreeHitCounters.org</a></p>
+          
         </div>
       </footer> <!-- End Footer -->
     </aside> <!-- End Sidebar -->
@@ -165,9 +165,8 @@ competition on the Grand Challenge website. During pregnancy, ultrasound imaging
     </div>
   </div>
   <script src="https://apps.elfsight.com/p/platform.js" defer></script>
-     <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=af1b8762c8f73895e8dece19503531a79f3aa304'></script>
-<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/825771/t/5"></script>
-  <div class="elfsight-app-91c01056-3272-4d17-af2f-8730f2244ef9"></div>
+  <div class="elfsight-app-91c01056-3272-4d17-af2f-8730f2244ef9"> <a href='https://freehitcounters.org/'>FreeHitCounters.org</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=13f9062cbe35384f63ae5c9c1f684d98e12fb69c'></script>
+<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/825776/t/5"></script></div>
 </body>
 
 </html>
