--- a/index.html
+++ b/index.html
@@ -165,8 +165,9 @@ competition on the Grand Challenge website. During pregnancy, ultrasound imaging
     </div>
   </div>
   <script src="https://apps.elfsight.com/p/platform.js" defer></script>
-  <div class="elfsight-app-91c01056-3272-4d17-af2f-8730f2244ef9"> <a href='https://freehitcounters.org/'>FreeHitCounters.org</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=13f9062cbe35384f63ae5c9c1f684d98e12fb69c'></script>
+    <<div><a href='https://freehitcounters.org/'>FreeHitCounters.org</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=13f9062cbe35384f63ae5c9c1f684d98e12fb69c'></script>
 <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/825776/t/5"></script></div>
+  <div class="elfsight-app-91c01056-3272-4d17-af2f-8730f2244ef9"></div>
 </body>
 
 </html>
