--- a/index.html
+++ b/index.html
@@ -26,9 +26,6 @@
   <div class="wrapper">
     <aside class="sidebar">
       <header>
-        
-    <<div><a href='https://freehitcounters.org/'>FreeHitCounters.org</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=13f9062cbe35384f63ae5c9c1f684d98e12fb69c'></script>
-<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/825776/t/5"></script></div>
         <div class="about">
           <div class="cover-author-image">
             <a href="" target="_self"><img src="Images/akansh_maurya.jpg" alt="Akansh Maurya"></a>
@@ -70,6 +67,12 @@
         </section> <!-- End Section Contact -->
         <div class="copyright">
           <p>2021 © Akansh Maurya</p>
+          <div style="text-align: center;"><a href='https://freehitcounters.org/'></a>
+            <script type='text/javascript'
+              src='https://www.freevisitorcounters.com/auth.php?id=13f9062cbe35384f63ae5c9c1f684d98e12fb69c'></script>
+            <script type=" text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/825776/t/5">
+              </script>
+          </div>
           
         </div>
       </footer> <!-- End Footer -->
