--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </section> <!-- End Section Contact -->
         <div class="copyright">
           <p>2021 © Akansh Maurya</p>
-          <div style="text-align: center;"><a href='https://freehitcounters.org/'></a>
+          <div style="text-align: center;"><a href='https://freehitcounters.org/'>...</a>
             <script type='text/javascript'
               src='https://www.freevisitorcounters.com/auth.php?id=13f9062cbe35384f63ae5c9c1f684d98e12fb69c'></script>
             <script type=" text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/825776/t/5">
